criando endpoint de download do zip
