# src/infra/api/processRouter.ts
@@ -8,5 +8,6 @@ const upload = multer();
 
 userRouter.get('/api/process-manager', errorHandler(processController.listProcess.bind(processController)));
 userRouter.post('/api/process-manager/upload', upload.single("video"), errorHandler(processController.upload.bind(processController)));
+userRouter.get('/api/process-manager/:processId/download', errorHandler(processController.downloadZip.bind(processController)));
 
 export default userRouter;
